@@ -3,6 +3,7 @@ pavo 0.5-1
 MINOR FEATURES AND BUG FIXES
 * vismodel() accepts matrix, data.frame or rspec objects for the illuminant, updated warning messages associated with this use
 * vismodel() accepts user-defined achromatic receptors
+* tcsplot(), tcsvol() & tcspoints(): transparency control passed to user
 
 pavo 0.5
 ------------------------------------------------------------------------------
